--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,15 @@
-﻿Content/Weapon_Pack
+﻿Saved/Config/CrashReportClient
+Saved/Crashes
+Saved/Logs
+Saved/WorldPartition
+Saved/AutoScreenshot.png
+Saved/webcache_4147
+
+Intermediate/CachedAssetRegistry.bin
+Saved/Temp
+Saved/StagedBuilds
+Saved/Cooked
 Content/GothicTemple
-
-Intermediate
-.vs
-Build
-Saved
-Plugins/*/Intermediate
-
+Saved/Autosaves/Game/GothicTemple
+Content/Weapon_Pack
+Content/GothicTemple
