--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,22 @@
-﻿#Compiled Static libraries
+﻿#Compiled Object Files
+*.slo
+*.lo
+*.o
+*.obj
+
+#Precompiled Headers
+*.gch
+*.pch
+
+#Compiled Dynamic libraris
+*.so
+*.dylib
+*.dll
+
+#Fortran module files
+*.mod
+
+#Compiled Static libraries
 *.lai
 *.la
 *.a
@@ -53,3 +71,5 @@ DerivedDataCache/*
 
 Content/Weapon_Pack
 Content/GothicTemple
+.vs/
+.rider/
