--- a/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/WindowsEditor/EditorPerProjectUserSettings.ini
@@ -1257,7 +1257,7 @@ ContentBrowserDrawer.ActiveTypeFilters=
 ContentBrowserDrawer.EnabledTypeFilters=
 ContentBrowserDrawer.ActiveFrontendFilters=
 ContentBrowserDrawer.EnabledFrontendFilters=
-ContentBrowserDrawer.SelectedPaths=/Game/FlexibleCombatSystem
+ContentBrowserDrawer.SelectedPaths=/Game/MSPresets
 ContentBrowserDrawer.PluginFilters=
 ContentBrowserDrawer.Favorites.SelectedPaths=
 FavoritePaths=/Game/ThirdPerson/Maps,/Game/FlexibleCombatSystem
@@ -3651,7 +3651,7 @@ Value=1
 [DetailPropertyExpansion]
 WorldPartitionRuntimeSpatialHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
 WorldPartitionRuntimeHash="\"Object\" \"Object.RuntimeSettings.Grids\" \"Object.RuntimeSettings.Grids.Grids[0]\" "
-Object="\"Object\" "
+Object="\"Object\" \"Object.SkeletalMeshes\" "
 CapsuleComponent="\"Object\" "
 ShapeComponent="\"Object\" "
 PrimitiveComponent="\"Object\" "
@@ -4077,6 +4077,7 @@ RecentlyPlaced=/Game/FlexibleCombatSystem/DemoRoom/Meshes/SM_Axe.SM_Axe;
 RecentlyPlaced=/Game/FlexibleCombatSystem/Blueprints/Weapons/AI/BP_AI_AxeAndShield.BP_AI_AxeAndShield;
 
 [PluginBrowser]
+InstalledPlugins=AsyncLoadingScreen
 InstalledPlugins=DialogueSx
 
 [/Script/UnrealEd.LevelEditorMiscSettings]
