--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -2,7 +2,7 @@
 GameName=Test
 
 [/Script/EngineSettings.GameMapsSettings]
-EditorStartupMap=/Game/MyContent/Scenes/MainScene.MainScene
+EditorStartupMap=/Game/MyContent/Scenes/MainMenuMap.MainMenuMap
 LocalMapOptions=
 TransitionMap=None
 bUseSplitscreen=True
